--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ html {
 }
 body {
     background-color: var(--very-light-gray);
+    overflow-x: hidden;
 }
 
 /* HEADER */
@@ -35,14 +36,14 @@ body {
     height: 12vh;
     position: relative;
     z-index: 1;
+    padding: 2rem;
 }
 .header .button {
     display: none;
 }
 .header--img {
-    width: 160px;
+    width: 140px;
     height: 20px;
-    padding-left: 2rem;
 }
 .header--links {
     height: 45vh;
@@ -118,6 +119,9 @@ body {
 .hero {
     height: 88vh;
     margin-bottom: 6rem;
+    display: grid;
+    grid-template-areas: "top"
+                        "bottom";
 }
 
 .hero--img {
@@ -125,12 +129,11 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    /* background-position-y: center; */
 
+    grid-area: top;
     height: 44vh;
     display: flex;
     justify-content: center;
-    /* padding-bottom: 3rem; */
 
     box-sizing: border-box;
 }
@@ -139,11 +142,11 @@ body {
     width: 310px;
     height: 380px;
     transform: translateY(-120px);
-    
 }
 
 .hero--description {
     padding: 2rem;
+    grid-area: bottom;
 
     background-color: var(--very-light-gray);
     text-align: center;
@@ -164,6 +167,7 @@ body {
 
 .button {
     text-decoration: none;
+    text-align: center;
     font-size: 1.4rem;
     font-weight: 600;
     width: 20rem;
@@ -173,6 +177,9 @@ body {
     padding: 1.5rem 3rem;
     align-self: center;
 }
+.button:hover {
+    opacity: .7;
+}
 
 /* -------- DESCRIPTION SECTION --------- */
 
@@ -181,6 +188,8 @@ body {
     color: var(--dark-blue);
     padding: 6rem 2rem 0;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .description h2 {
@@ -193,17 +202,19 @@ body {
     font-size: 1.6rem;
     color: var(--grayish-blue);
     margin-bottom: 4rem;
+    max-width: 60rem;
+    align-self: center;
 }
 
 .description--cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .description--card {
     margin-bottom: 4rem;
-    min-width: 25rem;
-    max-width: 32rem;
+    max-width: 24rem;
 }
 
 .description--card img,
@@ -214,6 +225,7 @@ body {
 
 .description--card p {
     color: var(--grayish-blue);
+    font-size: 1.4rem;
 }
 
 /* --------- BLOG ------------ */
@@ -233,12 +245,13 @@ body {
 .blog--cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .blog--card {
     margin-bottom: 4rem;
-    min-width: 25rem;
-    max-width: 32rem;
+    margin: 1rem;
+    max-width: 37rem;
     background-color: var(--white);
     border-radius: 10px;
     overflow: hidden;
@@ -278,16 +291,19 @@ body {
     background-color: var(--dark-blue);
     color: var(--white);
     display: grid;
-    grid-template-rows: auto auto auto;
+    grid-template-areas: "top"
+                        "middle"
+                        "end";
     row-gap: 30px;
     padding: 4rem;
     text-align: center;
 }
 
 .footer--top {
+    grid-area: top;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -298,6 +314,7 @@ body {
 }
 
 .footer--middle {
+    grid-area: middle;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -305,13 +322,15 @@ body {
 
 .footer--middle ul {
     display: flex;
-    height: 47.5%;
+    height: 50%;
     flex-direction: column;
     justify-content: space-between;
+    padding-bottom: .5rem;
 }
 
 .footer--middle li {
     list-style: none;
+    padding: .5rem;
 }
 
 .footer--middle a {
@@ -320,6 +339,7 @@ body {
 }
 
 .footer--end {
+    grid-area: end;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
